# chat23

./: .gitignore  README  build.py  layout.glade
include/: common.hpp  gui.hpp  log.hpp
include/msnp8/: chat.hpp  command.hpp  contact.hpp  error.hpp  msnp8.hpp
include/net/: http.hpp  socket.hpp  sslsocket.hpp
scripts/: CMakeLists.txt
src/: gui.cpp  log.cpp  main.cpp
src/msnp8/: chat.cpp  command.cpp  error.cpp  msnp8.cpp  ns_async.cpp  sb_async.cpp
src/net/: http.cpp  socket.cpp  sslsocket.cpp
